# ConanQtPackageTest

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LinuxGcc9-profile  README.md  VS2019-profile  conanfile.txt
.github/workflows/: actions.yml  actions.yml.bak  build-Qt5.12.6-Clang-shared-debug.yml  build-Qt5.12.6-Clang-static-release.yml  build-Qt5.12.6-Gcc-shared-debug.yml  build-Qt5.12.6-VS2019-shared-debug.yml  build-Qt5.12.6-VS2019-static-release.yml  build-Qt5.12.9-Clang-shared-debug.yml  build-Qt5.12.9-Clang-static-release.yml  build-Qt5.12.9-Gcc-shared-debug.yml  build-Qt5.12.9-VS2019-shared-debug.yml  build-Qt5.12.9-VS2019-static-release.yml  build-Qt5.13.2-Clang-shared-debug.yml  build-Qt5.13.2-Clang-static-release.yml  build-Qt5.13.2-Gcc-shared-debug.yml  build-Qt5.13.2-VS2019-shared-debug.yml  build-Qt5.13.2-VS2019-static-release.yml  build-Qt5.14.2-Clang-shared-debug.yml  build-Qt5.14.2-Clang-static-release.yml  build-Qt5.14.2-Gcc-shared-debug.yml  build-Qt5.14.2-VS2019-shared-debug.yml  build-Qt5.14.2-VS2019-static-release.yml  build-Qt5.15.1-Clang-shared-debug.yml  build-Qt5.15.1-Clang-static-release.yml  build-Qt5.15.1-Gcc-shared-debug.yml  build-Qt5.15.1-VS2019-shared-debug.yml  build-Qt5.15.1-VS2019-static-release.yml
Sources/: CMakeLists.txt  WorkingConfigs.md  buildActionsLinux.yml.in  buildActionsWindows.yml.in  conanfile.py  createWorkflows.cmake  packages.cmake  test.cpp
Sources/ConanProfiles/: ConanProfile-Clang-shared-debug  ConanProfile-Clang-static-release  ConanProfile-Gcc-shared-debug  ConanProfile-VS2019-shared-debug
Sources/Conanfiles/: conanfile_Qt5.12.6.txt  conanfile_Qt5.14.1.txt  conanfile_Qt5.14.2.txt
Sources/QtTestConsumer/: CMakeLists.txt  conanfile_Qt5.12.6.txt  conanfile_Qt5.12.7.txt  conanfile_Qt5.12.8.txt  conanfile_Qt5.12.9.txt  conanfile_Qt5.13.0.txt  conanfile_Qt5.13.1.txt  conanfile_Qt5.13.2.txt  conanfile_Qt5.14.0.txt  conanfile_Qt5.14.2.txt  conanfile_Qt5.15.0.txt  conanfile_Qt5.15.1.txt
Sources/QtTestConsumer/TestProject/: CMakeLists.txt  test.cpp
